--- a/src/components/DeviceOverview/DeviceOverview.module.css
+++ b/src/components/DeviceOverview/DeviceOverview.module.css
@@ -54,6 +54,7 @@
 .displayInfo {
     list-style-type: none;
     margin-top: 50px;
+    padding: 0;
 }
 
 .displayInfo > span {
@@ -67,6 +68,12 @@
 
 .displayInfo > li:nth-child(odd) {
     background-color: lightgrey;
+}
+
+.deviceImage {
+    max-width: 400px;
+    width: 100%;
+    min-width: 200px;
 }
 
 @media screen and (max-width: 830px) {
