--- a/src/pages/Auth/Auth.module.css
+++ b/src/pages/Auth/Auth.module.css
@@ -10,7 +10,8 @@
 .content {
     background-color: lightgrey;
     padding: 20px 50px;
-    width: 60%;
+    width: 90%;
+    max-width: 920px;
 }
 
 .title {
@@ -62,4 +63,10 @@
 
 .inputPair > .title {
     margin-bottom: 10px;
+}
+
+@media screen and (max-width: 520px){
+    .bottomWrapper {
+        flex-direction: column;
+    }
 }
